add AutoSync and CompatibleWith events